1.18 and 1.19 support